--- a/index.html
+++ b/index.html
@@ -1795,7 +1795,7 @@
     </style>
 </head>
 <body>
-    <div class="luxury-travel-container">
+    <div class="luxury-travel-container" style="opacity: 0.5;">
         <div style="text-align:center; margin-bottom:1rem;">
             <h1 class='fnt' style="color:#232226; font-size:6rem;  letter-spacing:1px; margin-bottom:0.5rem;">FLY WITH LUX</h1>
         </div>
