--- a/index.html
+++ b/index.html
@@ -1794,8 +1794,8 @@
 #closeContactModalBtn:hover { color: #ffae00; transform: scale(1.1); }
     </style>
 </head>
-<body style="opacity:1;>
-    <div class="luxury-travel-container" style="opacity: 0.5;">
+<body style="opacity:0.5;">
+    <div class="luxury-travel-container">
         <div style="text-align:center; margin-bottom:1rem;">
             <h1 class='fnt' style="color:#232226; font-size:6rem;  letter-spacing:1px; margin-bottom:0.5rem;">FLY WITH LUX</h1>
         </div>
