--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         .luxury-travel-container {
             font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-            background-color: white;
+            background-color:transparent;
             min-height: 63vh;
             display: flex;
             flex-direction: column;
@@ -1795,7 +1795,7 @@
     </style>
 </head>
 <body style="opacity:1;>
-    <div class="luxury-travel-container" style="opacity: 0.5;">
+    <div class="luxury-travel-container">
         <div style="text-align:center; margin-bottom:1rem;">
             <h1 class='fnt' style="color:#232226; font-size:6rem;  letter-spacing:1px; margin-bottom:0.5rem;">FLY WITH LUX</h1>
         </div>
