--- a/index.html
+++ b/index.html
@@ -42,18 +42,16 @@
         }
 
         .luxury-travel-container {
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-            background-color:transparent;
-            min-height: 63vh;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
-            padding: 2rem 1rem;
-            
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    background-color: transparent;
+    min-height: 100vh;              /* full viewport height */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;        /* center vertically */
+    padding: 2rem 1rem;
+}
 
-            
-        }
 
         /* Animations */
         @keyframes fadeInUp {
