--- a/index.html
+++ b/index.html
@@ -1844,7 +1844,7 @@
 <body>
     <div class="luxury-travel-container">
         <div style="text-align:center; margin-bottom:1rem;">
-            <h1 class='fnt' style="color:#232226; font-size:6rem;  letter-spacing:1px; margin-bottom:0.5rem;">FLY WITH LUX</h1>
+            <h1 class='fnt' style="color:#232226; font-size:6rem;  letter-spacing:1px; margin-bottom:0.5rem;">BOOK A JET</h1>
         </div>
         <!-- Black pill at top -->
         <div class="top-pill"></div>
