--- a/swmkjijets.html
+++ b/swmkjijets.html
@@ -44,7 +44,7 @@
         .booking-card {
             width: 100%;
             max-width: 64rem;
-            background-color: #f5f5f5;
+            background-color: transparent;
             border-radius: 1.5rem;
             padding: 7px;
             padding-left: 13px;
@@ -58,8 +58,8 @@
             padding: 12px 14px;
             border-radius: 12px;
             border: 1px solid #2a2a2a;
-            background: transparent;
-            color: white;
+            background: #f5f5dc; /* Beige background */
+            color: white; /* White text */
             box-sizing: border-box;
         }
 
@@ -71,7 +71,7 @@
             display: none;
             place-items: center;
             padding: clamp(12px, 3vw, 24px);
-            background: rgba(0,0,0,75);
+            background: rgba(0,0,0,75); /* Transparent overlay background */
             backdrop-filter: blur(3px);
             z-index: 2001;
         }
@@ -84,7 +84,7 @@
             width: min(720px, 96vw);
             max-height: 90dvh;
             overflow: auto;
-            background: #1d1b20;
+            background: transparent;
             border: 1px solid #4b5563;
             border-radius: 16px;
             padding: 20px;
