--- a/index.html
+++ b/index.html
@@ -1878,7 +1878,7 @@
                 <i data-lucide="plane-takeoff" class="category-icon"></i>
             </label>
             <div class="location-input">
-                <input id="fromLocationInput" class="location-text" type="text" value="London" placeholder="Search city or airport..." style="width:100%;background:transparent;border:none;outline:none;color:white;font-size:2rem;text-align:center;" />
+                <input id="fromLocationInput" class="location-text" type="text" value="" placeholder="Search city or airport..." style="width:100%;background:transparent;border:none;outline:none;color:white;font-size:2rem;text-align:center;" />
             </div>
 
                         <div class="dropdown" id="fromDropdown">
@@ -1904,7 +1904,7 @@
                 <i data-lucide="plane-landing" class="category-icon"></i>
             </label>
             <div class="location-input">
-                <input id="toLocationInput" class="location-text" type="text" value="Abu Dhabi" placeholder="Search city or airport..." style="width:100%;background:transparent;border:none;outline:none;color:white;font-size:2rem;text-align:center;" />
+                <input id="toLocationInput" class="location-text" type="text" value="" placeholder="Search city or airport..." style="width:100%;background:transparent;border:none;outline:none;color:white;font-size:2rem;text-align:center;" />
             </div>
 
                         <div class="dropdown" id="toDropdown">
